--- a/pages/acceuil.html
+++ b/pages/acceuil.html
@@ -12,7 +12,7 @@
   <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
     <div class="text-2xl font-bold bg-gradient-to-r from-blue-600 to-blue-400 bg-clip-text text-transparent">MédiCare+</div>
     <div class="hidden md:flex space-x-8">
-        <a href="index.html" class="text-blue-600 font-semibold">Accueil</a>
+        <a href="acceuil.html" class="text-blue-600 font-semibold">Accueil</a>
       <a href="med.html" class="text-gray-600 hover:text-blue-600 transition-colors">Médecins</a>
     
       <a href="rendez-vous.html" class="text-gray-600 hover:text-blue-600 transition-colors">Rendez-vous</a>
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div id="mobileMenu" class="hidden md:hidden px-6 pb-4 space-y-2">
-    <a href="index.html" class="block text-blue-600 font-semibold py-2">Accueil</a>
+    <a href="acceuil.html" class="block text-blue-600 font-semibold py-2">Accueil</a>
     <a href="med.html" class="block text-gray-600 hover:text-blue-600 py-2">Médecins</a>
     <a href="rendez-vous.html" class="block text-gray-600 hover:text-blue-600 py-2">Rendez-vous</a>
     <a href="suivi.html" class="block text-gray-600 hover:text-blue-600 py-2">Suivi Santé</a>
